[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "build",
    "torch",
    "numpy",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "toploc"
dynamic = ["version"]
authors = [
    {name = "Jack Min Ong", email = "ongjackm@gmail.com"},
]
description = "Lib for generating model inference and training proofs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools.dynamic]
version = {attr = "toploc.__version__"}
